Update - change server to Mariadb for the debian server

--- a/.env
+++ b/.env
@@ -37,3 +37,6 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # Gmail SHOULD NOT be used on production, use it in development only.
 MAILER_DSN=gmail://hsp.projet@gmail.com:glczbvrjoekvzzuh@default
 ###< symfony/google-mailer ###
+
+DATABASE_URL="mysql://root:@127.0.0.1:3307/hsp"
+
